# Textcat

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
data/: test1.xml
doc/: XML.md
example/XML/DOMReader/: DOMReader.cpp
example/XML/DOMWriter/: DOMWriter.cpp
example/XML/SAXReader/: SAXReader.cpp
example/XML/SAXWriter/: SAXWriter.cpp
example/XML_DOMReader/: XML_DOMReader.cpp
example/XML_SAXReader/: XML_SAXReader.cpp
include/Cats/: Textcat.hpp
include/Cats/Textcat/: XML.hpp
include/Cats/Textcat/XML/: DOM.hpp  Document.hpp  Handler.hpp  Parser.hpp  Serializer.hpp
